--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,9 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="18" />
 	<uses-permission android:name="android.permission.INTERNET" />
-    
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
+ 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+ 	    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
